trying to align my welcome a little more to the left so it can be hid once the sidebar slides out

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="container col-sm-12 col-md-12 col-lg-12">
+    <div class="container col-lg-3">
         <div id="mySidenav" class="sidenav">
             <!-- javascript:void(0) tells the browser to stay on the same page -->
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
