--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="container col-lg-3">
+    <div class="container col-lg-3 col-md-3 col-sm-3">
         <div id="mySidenav" class="sidenav">
             <!-- javascript:void(0) tells the browser to stay on the same page -->
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -25,41 +25,55 @@
             <a onclick="showSocks()">Socks</a>
             <br>
             <br>
-            <a href="#">
+            <a onclick="showCart()">
                 <i class="fa fa-shopping-basket" aria-hidden="true"></i>
                 Checkout </a>
         </div>
-        <h3 id="open-sidebar">
-            <span onclick="openNav()">&#9776; Welcome</span>
-        </h3>
         <!-- <img id="company-logo" src="photos/company-logo.png"> -->
     </div>
     <div>
-        <div id="jackets"></div>
-    </div>
-    <div>
-        <div id="collared-shirts"></div>
-    </div>
-    <div>
-        <div id="tshirts"></div>
-    </div>
-    <div>
-        <div id="pants"></div>
-    </div>
-    <div>
-        <div id="shoes"></div>
-    </div>
-    <div>
-        <div id="socks"></div>
-    </div>
-
-    <!-- <footer class="container-fluid text-center">
+        <h3 class="col-lg-1">
+            <span id="open-sidebar" onclick="openNav()">&#9776;Welcome</span>
+        </h3>
+        <h3 class="col-lg-6">
+            <form id="sellform">
+                <div class="form-group">
+                    <label for="exampleTextarea">
+                        Sell
+                    </label>
+                    <textarea rows="1" cols="30" maxlength="50" placeholder="Price"></textarea>
+                    <br>
+                    <textarea rows="1" cols="30" maxlength="50" placeholder="Description"></textarea>
+                </div>
+                <button type="submit" id="sell">Sell</button>
+            </form>
+        </h3>
+        <div>
+            <div class="col-lg-12 background">
+                <div id="jackets"></div>
+            </div>
+            <div class="col-lg-12 background">
+                <div id="collared-shirts"></div>
+            </div>
+            <div class="col-lg-12 background">
+                <div id="tshirts"></div>
+            </div>
+            <div class="col-lg-12 background">
+                <div id="pants"></div>
+            </div>
+            <div class="col-lg-12 background">
+                <div id="shoes"></div>
+            </div>
+            <div class="col-lg-12 background">
+                <div id="socks"></div>
+            </div>
+            <!-- <footer class="container-fluid text-center">
         <p>Footer Text</p>
     </footer> -->
 
-    <script src="vendor/jquery.js"></script>
-    <script src="vendor/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
-    <script src="index.js"></script>
+            <script src="vendor/jquery.js"></script>
+            <script src="vendor/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+            <script src="index.js"></script>
 </body>
 
 </html>
