--- a/index.html
+++ b/index.html
@@ -35,19 +35,20 @@
         <h3 class="col-lg-1">
             <span id="open-sidebar" onclick="openNav()">&#9776;Welcome</span>
         </h3>
-        <h3 class="col-lg-6">
+        <!-- <h3 class="sell-item">
             <form id="sellform">
                 <div class="form-group">
                     <label for="exampleTextarea">
-                        Sell
+                        Sell Item
                     </label>
+                    <br>
                     <textarea rows="1" cols="30" maxlength="50" placeholder="Price"></textarea>
                     <br>
                     <textarea rows="1" cols="30" maxlength="50" placeholder="Description"></textarea>
                 </div>
                 <button type="submit" id="sell">Sell</button>
             </form>
-        </h3>
+        </h3> -->
         <div>
             <div class="col-lg-12 background">
                 <div id="jackets"></div>
@@ -66,6 +67,9 @@
             </div>
             <div class="col-lg-12 background">
                 <div id="socks"></div>
+            </div>
+            <div class="col-lg-12 background">
+                <div id="cart"></div>
             </div>
             <!-- <footer class="container-fluid text-center">
         <p>Footer Text</p>
