commented out function in js file and just did my columns in my html file. about to push to github and see how it looks

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- <img id="company-logo" src="photos/company-logo.png"> -->
     </div>
     <div>
-        <h3 class="col-lg-1">
+        <h3 class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
             <span id="open-sidebar" onclick="openNav()">&#9776;Welcome</span>
         </h3>
         <!-- <h3 class="sell-item">
@@ -50,25 +50,25 @@
             </form>
         </h3> -->
         <div>
-            <div class="col-lg-12 background">
+            <div class="col-lg-12 col-sm-12 col-xs-12 background">
                 <div id="jackets"></div>
             </div>
-            <div class="col-lg-12 background">
+            <div class="col-lg-12 col-sm-12 col-xs-12 background">
                 <div id="collared-shirts"></div>
             </div>
-            <div class="col-lg-12 background">
+            <div class="col-lg-12 col-sm-12 col-xs-12 background">
                 <div id="tshirts"></div>
             </div>
-            <div class="col-lg-12 background">
+            <div class="col-lg-12 col-sm-12 col-xs-12 background">
                 <div id="pants"></div>
             </div>
-            <div class="col-lg-12 background">
+            <div class="col-lg-12 col-sm-12 col-xs-12 background">
                 <div id="shoes"></div>
             </div>
-            <div class="col-lg-12 background">
+            <div class="col-lg-12 col-sm-12 col-xs-12 background">
                 <div id="socks"></div>
             </div>
-            <div class="col-lg-12 background">
+            <div class="col-lg-12 col-sm-12 col-xs-12 background">
                 <div id="cart"></div>
             </div>
             <!-- <footer class="container-fluid text-center">
