--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="container col-lg-3 col-md-3 col-sm-3">
+    <div class="container col-lg-3 col-md-3 col-sm-3 col-xs-3 col-md-3">
         <div id="mySidenav" class="sidenav">
             <!-- javascript:void(0) tells the browser to stay on the same page -->
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
