made my side bar onlick be Elegant Spirit instead of Welcome

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div>
         <h3 class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
-            <span id="open-sidebar" onclick="openNav()">&#9776;Welcome</span>
+            <span id="open-sidebar" onclick="openNav()">&#9776;Elegant Spirit</span>
         </h3>
         <!-- <h3 class="sell-item">
             <form id="sellform">
