commented and deleted the things out that I did not need before my final commit

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <div class="container col-lg-3 col-md-3 col-sm-3 col-xs-3 col-md-3">
         <div id="mySidenav" class="sidenav">
-            <!-- javascript:void(0) tells the browser to stay on the same page -->
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a class="closebtn" onclick="closeNav()">&times;</a>
             <a onclick="showJackets()">Jackets</a>
             <a onclick="showCollaredShirts()">Collared Shirts</a>
             <a onclick="showTshirts()">T-Shirts/Long Sleeves</a>
