--- a/index.html
+++ b/index.html
@@ -12,71 +12,59 @@
 </head>
 
 <body>
-
-    <div class="container col-lg-3 col-md-3 col-sm-3 col-xs-3 col-md-3">
-        <div id="mySidenav" class="sidenav">
-            <a class="closebtn" onclick="closeNav()">&times;</a>
-            <a onclick="showJackets()">Jackets</a>
-            <a onclick="showCollaredShirts()">Collared Shirts</a>
-            <a onclick="showTshirts()">T-Shirts/Long Sleeves</a>
-            <a onclick="showPants()">Bottoms</a>
-            <a onclick="showShoes()">Shoes</a>
-            <a onclick="showSocks()">Socks</a>
-            <br>
-            <br>
-            <a onclick="showCart()">
-                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-                Checkout </a>
+    <ul>
+        <li>
+            <a onclick="showJackets()" class="active font-20px">Jackets</a>
+        </li>
+        <li>
+            <a onclick="showCollaredShirts()" class="font-20px">Collared Shirts</a>
+        </li>
+        <li>
+            <a onclick="showTshirts()" class="font-20px">T-Shirts</a>
+        </li>
+        <li>
+            <a onclick="showPants()" class="font-20px">Pants</a>
+        </li>
+        <li>
+            <a onclick="showShoes()" class="font-20px">Shoes</a>
+        </li>
+        <li>
+            <a onclick="showSocks()" class="font-20px">Socks</a>
+        </li>
+        <li>
+            <a id="nav-title">Elegant Spirit</a>
+        </li>
+    </ul>
+    <div class="container">
+        <div class="col-lg-12">
+            <div id="jackets"></div>
         </div>
-        <!-- <img id="company-logo" src="photos/company-logo.png"> -->
+        <div class="col-lg-12">
+            <div id="collared-shirts"></div>
+        </div>
+        <div class="col-lg-12">
+            <div id="tshirts"></div>
+        </div>
+        <div class="col-lg-12">
+            <div id="pants"></div>
+        </div>
+        <div class="col-lg-12">
+            <div id="shoes"></div>
+        </div>
+        <div class="col-lg-12">
+            <div id="socks"></div>
+        </div>
+        <div class="col-lg-12">
+            <div id="cart"></div>
+        </div>
     </div>
-    <div>
-        <h3 class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
-            <span id="open-sidebar" onclick="openNav()">&#9776;Elegant Spirit</span>
-        </h3>
-        <!-- <h3 class="sell-item">
-            <form id="sellform">
-                <div class="form-group">
-                    <label for="exampleTextarea">
-                        Sell Item
-                    </label>
-                    <br>
-                    <textarea rows="1" cols="30" maxlength="50" placeholder="Price"></textarea>
-                    <br>
-                    <textarea rows="1" cols="30" maxlength="50" placeholder="Description"></textarea>
-                </div>
-                <button type="submit" id="sell">Sell</button>
-            </form>
-        </h3> -->
-        <div>
-            <div class="col-lg-12 col-sm-12 col-xs-12 background">
-                <div id="jackets"></div>
-            </div>
-            <div class="col-lg-12 col-sm-12 col-xs-12 background">
-                <div id="collared-shirts"></div>
-            </div>
-            <div class="col-lg-12 col-sm-12 col-xs-12 background">
-                <div id="tshirts"></div>
-            </div>
-            <div class="col-lg-12 col-sm-12 col-xs-12 background">
-                <div id="pants"></div>
-            </div>
-            <div class="col-lg-12 col-sm-12 col-xs-12 background">
-                <div id="shoes"></div>
-            </div>
-            <div class="col-lg-12 col-sm-12 col-xs-12 background">
-                <div id="socks"></div>
-            </div>
-            <div class="col-lg-12 col-sm-12 col-xs-12 background">
-                <div id="cart"></div>
-            </div>
-            <!-- <footer class="container-fluid text-center">
+    <!-- <footer class="container-fluid text-center">
         <p>Footer Text</p>
     </footer> -->
 
-            <script src="vendor/jquery.js"></script>
-            <script src="vendor/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
-            <script src="index.js"></script>
+    <script src="vendor/jquery.js"></script>
+    <script src="vendor/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
