--- a/index.html
+++ b/index.html
@@ -12,40 +12,61 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <a onclick="showJackets()" class="font-20px">Jackets</a>
-        <a onclick="showCollaredShirts()" class="font-20px">Collared Shirts</a>
-        <a onclick="showTshirts()" class="font-20px">T-Shirts</a>
-        <a onclick="showPants()" class="font-20px">Pants</a>
-        <a onclick="showShoes()" class="font-20px">Shoes</a>
-        <a onclick="showSocks()" class="font-20px">Socks</a>
-        <a id="navbar-cart">
-            <i class="fa fa-shopping-cart" aria-hidden="true"></i>Total: </a>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Elegant Spirit</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li>
+                    <a onclick="showItems('jackets')" class="font-20px">Jackets</a>
+                </li>
+                <li>
+                    <a onclick="showItems('shirts')" class="font-20px">Collared Shirts</a>
+                </li>
+                <li>
+                    <a onclick="showItems('tshirts')" class="font-20px">T-Shirts</a>
+                </li>
+                <li>
+                    <a onclick="showItems('pants')" class="font-20px">Pants</a>
+                </li>
+                <li>
+                    <a onclick="showItems('shoes')" class="font-20px">Shoes</a>
+                </li>
+                <li>
+                    <a onclick="showItems('socks')" class="font-20px">Socks</a>
+                </li>
+                <li>
+                    <a class="navbar-cart">
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>Total: $0.00</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <div class="homepage">
+    <div class="homepage for-sale row">
         <hr id="hr-1">
         <h1>ELEGANT SPIRIT CLOTHING CO.</h1>
-        <div class="container">
-            <div id="jackets" class="for-sale">
-            </div>
-            <div id="collared-shirts" class="for-sale"></div>
-            <div id="tshirts" class="for-sale"></div>
-            <div id="pants" class="for-sale"></div>
-            <div id="shoes" class="for-sale"></div>
-            <div id="socks" class="for-sale"></div>
-            <div id="cart" class="for-sale"></div>
-        </div>
         <hr id="hr-2">
         <h2>SATISFACTION GUARANTEED</h2>
         <hr id="hr-3">
         <h3>SPEEDY DELIVERY</h3>
         <hr id="hr-4">
         <h4>HIGH QUALITY</h4>
+        <hr id="hr-5">
     </div>
-
-    <!-- <footer class="container-fluid text-center">
-        <p>Footer Text</p>
-    </footer> -->
+    <div class="container">
+        <div id="jackets" class="for-sale row">
+        </div>
+        <div id="shirts" class="for-sale row"></div>
+        <div id="tshirts" class="for-sale row"></div>
+        <div id="pants" class="for-sale row"></div>
+        <div id="shoes" class="for-sale row"></div>
+        <div id="socks" class="for-sale row"></div>
+        <div id="cart" class="for-sale row"></div>
+    </div>
+    <!-- <div class="footer">
+        <p>BASE CAMP</p>
+    </div> -->
 
     <script src="vendor/jquery.js"></script>
     <script src="vendor/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
