the store is now to a working place.. few minor mishaps but look to finish the rest soon

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
     </nav>
     <div class="homepage for-sale row">
+        <img src="photos/company-logo.png">
         <hr id="hr-1">
         <h1>ELEGANT SPIRIT CLOTHING CO.</h1>
         <hr id="hr-2">
