changed my cart link to say 'cart' instead of 'total'

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </li>
                 <li>
                     <a class="navbar-cart" href="#cart" onclick="showCart()">
-                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>Total: $0.00</a>
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart: $0.00</a>
                 </li>
             </ul>
         </div>
